Minor changes & typos

--- a/activities.tex
+++ b/activities.tex
@@ -40,13 +40,13 @@ be a forum where research experiences are shared, research teams are
 formed, new research projects are started, and familiarity with the
 strategic and social aspects of research is gained.
 
-In addition to technical presentations and discussions by undergraduate
+In addition to technical presentations by undergraduate
 students, the seminar will include:
 \bits
 \item meetings where faculty (from sciences for example) present quantitative data analysis research projects to recruit interested undergraduates
 \item  mentorship sessions by guest speakers, UW graduate students and faculty, on career options in research, applying to graduate school, how to work in a team, how to approach a potential research advisor, how to approach a new research project
 \item presentations from outside speakers (e.g local businesses such as Amazon,
-  Microsoft, and Google) on career opportunties in \cdse. We will assure to bring in women and underrepresented minorities role models as often as possible among the internal and external guest speakers.
+  Microsoft, and Google) on career opportunties in \cdse. As much as possible, we will focus on drawing a diverse group of guest speakers, including women and underrepresented minorities.
 \eits
 Some of the seminar's activities and goals overlap with the goals of {\em Statistics and Probability Association}\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and the Pre-MAP program\footnote{\tt http://www.astro.washington.edu/users/premap/}, 
 and we plan to do these jointly, reinforcing the  benefits for all groups involved.
@@ -60,8 +60,8 @@ For the statistics graduate students funded by this grant, we envision
 \item to fund several students for a relatively short time (2 quarters
   to 1 year). We adopt this ``rotation'' plan recognizing that developing 
 tools cannot be the only part of a PhD work in statistics. 
-This ``rotation'' model will also assure that the ``API'' of our data
-infrastructure is truly functional, as each departing graduate student 
+This ``rotation'' model will also assure a truly functional data
+infrastructure, as each departing graduate student 
 will have to ensure smooth transition to her/his successor.)
 \item Students will help develop the software and data infrastructure for
   the program, search for available data sets, curate them, write
