--- a/dissemination.tex
+++ b/dissemination.tex
@@ -9,8 +9,9 @@ as one of the main impediments for wide adoption of astrostatistics
 in graduate astronomy curricula around the country (by the Working 
 Group on Astroinformatics and Astrostatistics of the American Astronomical
 Society, chaired by the Co-PI Ivezi\'{c}).  We intend to make all our
-materials public, including lectures for both courses, data sets used
-in lectures and research seminars, and all the data analysis code. 
+materials public, including curricula and lectures for both courses,
+data sets used in lectures and research seminars, and all the data
+analysis code. 
 
 
 \subsection{Workshops} 
