--- a/education.tex
+++ b/education.tex
@@ -6,8 +6,7 @@ The ACMS {\em (Applied and Computational Mathematical Sciences)} was
 introduced in 1998 as a joint undergraduate program between the
 departments of Applied Mathematics, Computer Science and Engineering
 (CSE), Mathematics, and Statistics, among others.
-
-The ACMS program is structured into a {\em core} set of courses,
+The program is structured into a {\em core} set of courses,
 totaling 43 credits, and a set of options, or {\em tracks}. The tracks
 are either associated with a particular application domain ({\em
   Biological and Life Sciences, Mathematical Economics, Social and
@@ -46,9 +45,8 @@ courses, the following:
     \item {\sc STAT 498} Special topics
 \eits
 The program web page recommends that ``[this track] is ideally suited as a {\em second major} for students with a primary focus in the [\ldots] sciences''.
-The track curriculum differs little, most notably by the
-presence of the computer programming class {\sc CSE 142}, from the
-``standard'' Statistics major.
+The track curriculum differs little from the ``standard'' Statistics major,
+most notably by the presence of the computer programming class {\sc CSE 142}.
 
 {\bf Enrollment} The ACMS major is competitive, with the number of
 majors capped at about 200.  During the recent academic years,
@@ -59,53 +57,59 @@ Of these, the Statistics track accounts for {\it only} 4 students
 currently enrolled (none as double majors), and for 2 to 6 students
 graduated in each of the last 5 years. In the same time, enrollment in
 the Statistics major is at an all times high, with 127 currently
-enrolled students (74 double majors, 53 single majors) of which 77
+enrolled students (74 double majors, 53 single majors) of which 77 are
 women.
 
 \subsection{Transforming the Statistics  ACMS track}
 We propose to use the ACMS Statistics track as a vehicle to create a
 data-intensive or Big Data track in statistics. This transformative
-program will focus on teaching new ways for computational and
-statistical thinking. It will incorporate research within the teaching
+program will focus on teaching computational and statistical thinking.
+It will incorporate research within the teaching
 components and apply best practices when developing a diverse and
-representative student cohort.  In other words, we will aim not to
+representative student cohort.  In other words, the program will aim not to
 produce scientists who also know statistics (which can be well served
 by Statistics minor and other tracks of ACMS) but full-fledged
-statisticians who can function autonomously in the modern workforce.
+data scientists who can function autonomously in the modern workforce.
 
 There are several motivating factors:
 \bit
 \item The role of
- the statistician as data analyst and scientist has become both more central, and
- more demanding. As more data analysis and more decisions based on it
- are being shifted from humans to computers, statistics is called
- upon to design and validate the procedures used to take these
- decisions. Thus, the statician's importance in a much wider range of
- human activities, be they science or business. But the
- statistician's responsibility is commensurately growing, as (s)he needs
- to master the skills required by cyber-enabled science and data
+ the statistician as data analyst and scientist has become more central
+ within both research and industry, and thus more demanding.
+ As more data analysis and statistical reasoning tasks
+ are being automated using computers, statistical analysis is
+ increasingly employed in the design and validation of the procedures used.
+ The statistician's responsibility is commensurately growing, as (s)he needs
+ to master the wider skills required by cyber-enabled science and data
  analysis.
-\item Interest in statistics is at an all times high, as witnessed by
+\item Interest in statistics is at an all-time high, as witnessed by
   our enrollment numbers. We expect that the ACMS Statistics track
   will reach similar enrollment numbers. Note that at the current
   enrollment in the other tracks, the total ACMS enrollment will be
-  near the 200 level.
+  near 200.
 \item There is a disconnect between the classical statistics
   curriculum and the computational needs of the next generation of Big
-  Data statisticians. 
+  Data statisticians in both academia and industry.
 \item The nature of statistical analyses is itself affected by the
   rapid increase in data volumes \cite{friedman:97}; as has 
-  long been recognized. Computationally heavy statistical methods need to
+  long been recognized. Computationally intensive statistical methods need to
   be designed. Very large samples will support models of a complexity
   that could not be considered in real-life scenarios a decade or two
-  ago. It is no longer possible to perform model selection by explicitly
-  comparing all possible models (i.e.\ there can be an exponential
-  number of models to compare) and regularization methods are often
-  called into play, as are approximate computational
-  techniques. Leveraging unlabeled data for prediction is now an
-  almost universal necessity. Devising new methods to evaluate complex
-  models in an environment that is not stationary, nor controlled are
-  some of the challenges of modern data analysis.
+  ago. 
+  With an exponential number of potential models, brute-force comparison
+  is no longer possible.
+  %It is no longer possible to perform model selection by explicitly
+  %comparing all possible models (i.e.\ there can be an exponential
+  %number of models to compare).
+  Addressing the challenges of modern data analysis requires novel approaches
+  involving regularization schemes, approximation techniques, and prediction
+  robust to unlabeled or non-stationary data.
+  %and regularization methods are often
+  %called into play, as are approximate computational
+  %techniques. Leveraging unlabeled data for prediction is now an
+  %almost universal necessity. Devising new methods to evaluate complex
+  %models in an environment that is not stationary, nor controlled are
+  %some of the challenges of modern data analysis.
 \item The proposal fits in and leverages other \cdse\ efforts and successes at UW for creating a strong collaborative environment (the eScience Institute, the IGERT for graduate education in Big Data, and the related PhD tracks recently created in CSE and Statistics). The time is ripe to involve undergraduates, and specifically statistics and mathematics majors in this change.
 %\item This proposal is in the spirit of the ACMS original mission,
 %  bringing this program up to speed with the demands of the coming decade.
@@ -115,9 +119,10 @@ There are several motivating factors:
 \subsection{Work Plan}
 
 For planning purposes, we divide the proposed project into three stages which
-roughly map to yearly schedule. 
+roughly map to a yearly schedule. 
 
-\noindent {\bf Stage 1:} Design and introduce two new courses \statcl, \astrocl,
+\noindent {\bf Stage 1:} Design and introduce two new courses,
+\statcl, \astrocl,
 as {\em electives} in the track.  Start the Undergraduate \cdse~
 Research Seminar. This seminar will differ from the existing ``ACMS''
 Undergraduate Math Science Seminar ({\sc Math 498}), in that the
@@ -127,18 +132,18 @@ seminar topics will be their research projects (see Section
 
 \noindent {\bf Stage 2:} Redesign the track to address the needs of Big Data
 based on the evaluation of the first year of activities: move \statcl,
-Stochastic Processes {\sc STAT 481, 482} into the core. As the track
+``Stochastic Processes'' {\sc STAT 481, 482} into the core. As the track
 will no longer be regarded as a second major for science students, we
 will make room by removing the {\sc PHYS 121-2-3} courses (15 credits)
-from it.  Reorganizing the electives into two complementary groups:
+from it.  We will target interests of the diverse student body
+by reorganizing the electives into two complementary groups:
 math/stat electives (group I) and computing and science electives
-(group II) will enable targeting of the interests of a diverse student
-body.  Further reorganization of the core and electives could include
+(group II).  Further reorganization of the core and electives could include
 adding one or both of {\sc AMATH 482, 483} ``Data analysis'', and
 ``High performance scientific computing''.
 %consultation with Statistics faculty and the other ACMS participating
 %departments and Schools. 
-Organization of a workshop for UW faculty to share our experiences and
+Organization of workshop for UW faculty to share our experiences and
 teaching infrastructure and to broaden the science components of this program.
 
 \noindent {\bf Stage 3:} 
@@ -164,15 +169,15 @@ offered quite irregularly.
 
 For reasons we will expound in Section \ref{sec:Python}, we
 consider that Python is the more appropriate computer language for our
-goals. Thus, we will both introduce Python and will use it to teach
-statistical methodology.  As Python will be taught as a second
+goals. Thus, this curriculum will both introduce Python and will utilize it to
+teach statistical methodology.  As Python will be taught as a second
 programming language, and as it is similar enough to Java (taught in
 {\sc Cse 142}), we expect the students to assimilate it quickly under our
 guidance (there are also numerous publicly available tutorials).
 In Spring 2013, a pilot course was taught (by H. Koepke,
 Statistics) that introduced Python and taught statistical modeling
 using the language, to an audience of around 40 CSE undergraduates
-(the vast majority of wich did {\em not} know Python). The students'
+(the vast majority of whom did {\em not} know Python). The students'
 feedback was very encouraging, and one of the reasons we are confident
 in our approach.
 
@@ -223,7 +228,7 @@ How does UW support this plan:
 ``Computational Statistical Modeling and Machine Learning'' (4 credits)
 \item \astrocl ``Data Intensive Astronomy'' (3 credits)
 \eits
-These courses' aims are explicitly to (1) provide a strong statistical
+The aims of these sources are to (1) provide a strong statistical
 foundation in data analysis (2) give students a hands-on experience, through programming, and performing real data analyses on a computer, with the computational aspects of 
 statistical modeling in general, and (3)  introduce them to the  machine learning methodology in particular, with specific attention to the issues of big data.
 
@@ -233,7 +238,7 @@ The material covered will be partly overlapping with other courses
 material will stress the interaction of computational and
 statistical aspects in modeling and prediction with scientific and
 engineering data. In this sense, the overlap is deliberate
-so that the students can gain a new, computational, perspective on areas
+so that the students can gain a new computational perspective on areas
 already studied from a more theoretical point of view. 
 
 {\bf Prerequisites} (for either course): an introductory programming
@@ -255,7 +260,7 @@ Python, as well as specific data analysis tools (see Section \ref{sec:Python}).
 The students will practice programming in pairs (a.k.a extreme
 programming), using debuggers, profilers, writing modifiable code, etc.
 Another experience in the computer lab will be actual data analysis
-and visualization using the tools, the skills related to data
+and visualization using the tools, development of skills related to data
 visualisation, experimental data recording and reporting, etc.
 
 {\bf Homework assignments} There will be 4-5 homework
@@ -265,8 +270,8 @@ programming assignments, and data analysis assignments.
 A note on the overlap between \statcl~ and \astrocl: Where the two
 courses have overlapping topics, \astrocl~ will consider the big data case
 explicitly, while \statcl~ will consider the connections between
-statistical theory and computation. \statcl~ will support more basic
-Python, while \astrocl~ will support Python libraries for big data.
+statistical theory and computation. \statcl~ will cover more basic
+Python, while \astrocl~ will cover Python libraries for working with big data.
 
 
 \vskip 0.2in
@@ -285,8 +290,8 @@ Python, while \astrocl~ will support Python libraries for big data.
 \item[]{\bf Learning goals for \statcl:} Ability to perform computationally intensive, automated, robust and efficient data analysis. Ability to combine existing tools and libraries with programming in a general purpose language (Python). 
 Working knowledge of the most important/main machine learning tools and methods, as well as their probabilistic interpretation. Understanding of the practical implications of theoretical results like independence, overfitting, consistency of an estimator. 
 
-{\bf Textbooks:} Unfortunately, there is no single textbook one can
-assign for this course. We will rely partly on \meila's previously
+{\bf Textbooks:} Unfortunately, there is currently no single textbook
+suitable for this course. We will rely partly on \meila's previously
 developed course notes for {\it ``Probability and Statistics for
   Computer Science''}, a computationally minded introductory course,
 partly on new course notes to be developed by \meila\ specifically for
@@ -372,16 +377,18 @@ this proposal.
 
 
 We will leverage all the publicly available modern Python tools. In
-particular, seminar work will be built around the {\it astroML}
-package (available from http://www.astroml.org) that was developed by
+particular, many of the practical examples
+will be built around the {\it astroML}
+package\footnote{\url{http://www.astroml.org}} that was developed by
 Co-PIs to support the textbook used in the proposed \astrocl\
-course. {\it astroML} is a Python module for machine learning and data
-mining built on {\it numpy}, {\it scipy}, {\it scikit-learn}, and {\it
-  matplotlib}, and distributed under the 3-clause BSD license. It
+course. {\it astroML} is an open-source Python module for machine learning
+and data mining built on {\it numpy}, {\it scipy}, {\it scikit-learn},
+and {\it matplotlib}. It
 contains a growing library of statistical and machine learning
 routines for analyzing astronomical data in Python, loaders for
 several open astronomical datasets, and a large suite of examples of
-analyzing and visualizing astronomical datasets (there are close to
+data analysis and visualization in the astronomical context
+(there are close to
 two hundred examples of machine learning and visualization in the code
 library that supports the textbook alone). In addition to the {\it
   astroML} package, we will expose students to several other popular
@@ -389,7 +396,7 @@ and widely used toolkits (e.g. PyMC for Markov Chain Monte Carlo
 methods, and HealPy for spherical coordinates and spherical harmonic
 transformations).
 
-As an example of methods and exercises available in {\it astroML}, we
+As an example of the methods and exercises available in {\it astroML}, we
 single out methods for reducing data dimensionality. Many astronomical
 analyses must address the question of the complexity as well as size
 of the data set. Dimensionality reduction methods address the
@@ -398,12 +405,12 @@ set that contain most of the information. Classical approaches for
 identifying the principal dimensions include principal component
 analysis (PCA), independent component analysis (ICA), and non-negative
 matrix factorization (NMF). These methods are implemented in {\it
-  astroML}, with a user-friendly interface and adequate documentation
+  astroML}, with a well-documented user-friendly interface
 (see Figure~\ref{Fig:astroML}). Furthermore, {\it astroML} 
 includes easy-to-use code to automatically access and download spectra
 collected by the Sloan Digital Sky Survey (currently the ``gold
 standard'' for modern astronomical surveys and big data sets; see
-sdss.org).  Therefore, an undergraduate student will not only be
+sdss.org).  Through this, an undergraduate student will not only be
 exposed to modern statistical methods and a cutting-edge astronomical
 data set, but will be empowered to actually apply these methods to a
 real complex and massive data set.  The result of this exercise is
@@ -447,7 +454,7 @@ All Co-I's have extensive experience in teaching data intensive
 statistics and in incorporating these methodologies into undergraduate
 research. \meila~ has extensive previous experience teaching
 computational statistics courses at all levels. She developed the
-course ``Probability and Statistics for Computer Science'' an
+course ``Probability and Statistics for Computer Science'', an
 introductory course aimed at computer science majors, complete with
 exercises and demos in Matlab, revised the Statistical Computing
 graduate course sequence, later developed the Statistical Learning
@@ -486,7 +493,7 @@ and Astronomy, as well as faculty from these departments.
 %run by the Department of Astronomy will be used for recruitment. 
 % \mmp{shall i buy more nodes??}
 
-The \astroml~ textbook and the supporting public web site will provide the starting 
+The {\it astroML} textbook and the supporting public web site will provide the starting 
 point for the new courses' software and data infrastructure (see
 Section \ref{sec:Python}). All compute resources will be provide
 either by the Statistics department or, for cloud computing, through
