--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,12 @@
 \section{ INTRODUCTION}
 
 Most disciplines, from the physical to the life sciences, have entered
-an era, where discovery is no longer limited by the collection and
+an era where discovery is no longer limited by the collection and
 processing of data, but by the management and the statistical analysis
 of this information. Developments in instrumentation have led to a
-tremendous increase in the magnitude of available data (resulting in a
-focus on \emph{Big Data}).  While significant steps in the development
-of the statistical methodologies for processing Big Data have been
+tremendous increase in the magnitude of available data.
+While significant steps in the development
+of the statistical methodologies for processing this {\it Big Data} have been
 made, these ``hammers'' are rarely tied to fundamental questions that
 science and society wish to address. There remains a disconnect
 between methodological approaches to Big Data and the science that
@@ -30,11 +30,10 @@ University of Washington. We have secured broad institutional support
 and buy-in from two major departments (Statistics and Astronomy) to
 initiate this program with the expectation that, over the three years
 of this project, it will grow to encompass Mathematics and a broader
-range of science domains. The decimation of new curricula, software,
-research and teaching materials together with a workshop centered on
-professional development activities for faculty will enable this
-program to growth both internally to the University and to external
-partners.
+range of science domains. The dissemination of new curricula, software,
+research and teaching materials, together with a faculty-oriented
+workshop centered on professional development activities, will foster
+growth both in the University itself and within external partners.
 
 
 
