--- a/organization.tex
+++ b/organization.tex
@@ -8,8 +8,8 @@ This proposal aims to
 \bits
 \item Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
 by developing two new courses and a research seminar. 
-\item Expose students to computationally intensive data analysis and mentor them in research projects. 
-\item Facilitate adopting of this program by other institutions.
+\item Expose students to computationally intensive data analysis and mentor them in research. 
+\item Facilitate adoption of this program by other institutions.
 \eits  
 {\bf Long-term outcomes} For all participating students: 
 continued involvement with \cdse~ research, 
@@ -78,8 +78,9 @@ computer scientists at the University of Washington and Carnegie
 Mellon University.  This collaboration, dating to 2001, has
 demonstrated sustained success and was cited by the President of the
 American Statistical Association (ASA) as an exemplary
-interdisciplinary research team \cite{straf03}. Highlights from this
-collaboration include advances in cross-disciplinary education
+interdisciplinary research team \cite{straf03}. Highlights
+%from this collaboration
+include advances in cross-disciplinary education
 (including the integration of research and teaching), establishing a
 joint ``Big-Data'' PhD program between Computer Science and
 Statistics, the creation of an NSF-sponsored IGERT program between
@@ -112,7 +113,7 @@ Functional Activity in the Primary Motor Cortex'' from the {\em NSF
 project. It has involved so far 2 statistics graduate students and one
 undergraduate.
 
-Connolly is the Simulation Scientist for the LSST; responsible for the
+The Co-PI Connolly is the Simulation Scientist for the LSST; responsible for the
 modeling and simulations of the scientific performance of the
 LSST. Connolly's most recent NSF award IIS-0844580 \$490,398 ``Putting
 Astronomy's Head in the Cloud'' (2009 -- 2012) led to the development
@@ -155,7 +156,7 @@ three-year project has produced four journal publications, a
 Ph.D. thesis, and has engaged four undergraduates in data analysis and
 publications.
 
-Vanderplas is currently an NSF post-doctoral fellow, through the NSF
+Co-PI Vanderplas is currently an NSF post-doctoral fellow, through the NSF
 Transformative Computational Science using Cyberinfrastructure (CI TRaCS)
 program (``Weak Gravitational Lensing in the Petabyte Era'', award
 CI-TraCS-1226371).
@@ -165,8 +166,7 @@ on pushing the boundaries of data-intensive cosmological science through
 fundamental work on new database technologies. The cross-disciplinary nature
 of this work extends that of Vanderplas' past research, which includes several
 projects with collaborators from computer science and related fields
-\cite{daniel2011, Xiong2011, scikit-learn1, scikit-learn2}.
-
+\cite{scikit-learn2, Xiong2011, daniel2011, scikit-learn1}.
 Vanderplas has spent a significant amount of time on the development of
 open source scientific computing software, primarily in the Python
 language.  Among other contributions,
@@ -189,7 +189,7 @@ Astronomy textbook Vanderplas authored with Co-PIs Ivezic and Connolly.
 Beyond the statistical and astrophysical aspects of the research
 described above the PIs have demonstrated a commitment for integrating
 research and education (see, for example, the extensive machine
-learning tools available at http://astroml.github.com and the XXX). In
+learning tools available at \url{http://astroml.org} and the XXX). In
 the field of informal education, Connolly was the technical lead for
 the development of Sky in Google Earth (Google Sky;
 http://earth.google.com) which enabled the seamless exploration of
