--- a/planJake.tex
+++ b/planJake.tex
@@ -24,7 +24,7 @@ the curriculum material is made available on the course website\footnote{
 \url{http://www.astro.washington.edu/vanderplas/Astr599/}}.
 In the remaining two years of his fellowship, Vanderplas will expand this
 curriculum and offer the course to a wider audience of students through
-the University's inter-disciplinary eScience Institute.
+the eScience Institute.
 
 \comment{
 This curriculum is in many ways a fundamental component of the goals of the
