--- a/research.tex
+++ b/research.tex
@@ -10,10 +10,10 @@ graduate students.
 
 We will specifically foster working in teams of graduate and
 undergraduate students. The students will be mentored by the four
-PI's. They will work on real research projects, some of which
-are listed below. 
+PI's. Some potential research projects are listed below.
 \bits
 \item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{PerraultM:asymptotic-nips11,Perrault-JoncasM:riemann-jmlr11}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
+  %% Should we mention Vanderplas & Connolly LLE work here?
 \item {\em Non-parametric clustering and density estimation.} We will
   focus here on methods that cluster by finding high-density regions
   in very large data \cite{cheng:95,nugent:10,rinaldo:13}. This method
@@ -39,12 +39,12 @@ comparison of different methods and how to choose an optimal method
 for the specific domain problems at hand.
 \item {\em Time series analysis.} 
 We will focus here on methods for finding periodicity in time series 
-data. Starting from standard methods, that essentially fit a single 
-harmonic model to data with gaussian noise, we will explore how
+data. Starting from standard methods which essentially fit a single 
+harmonic model to data with Gaussian noise, we will explore how
 to incorporate non-sinusoidal periodicity (perhaps using template 
 light curves) and non-gaussian noise. We will also explore methods 
 for analysis of stochastic data, such as wavelet analysis and Gaussian
-processes with arbitrary covariance matrix.
+processes with arbitrary covariance.
 \eits
 %
 Results of this work may be part of publishable research; others will
