--- a/uw.tex
+++ b/uw.tex
@@ -5,14 +5,14 @@ The educational program described in this proposal fits naturally with a number 
 
 The eScience Institute was created in 2008 with a goal of “advancing data-driven techniques and technologies.” eScience has a core faculty and permanent research staff with long standing collaborations with Statistics, Applied Math, Computer Science, and the domain sciences. Activities sponsored through eScience include bootcamps, a long-running seminar series on eScience, a new PhD program, graduate and informal education curricula in the emerging area of data science, an established suite of UW-wide research cyberinfrastructure services for computing, data management and scalable analytics tools (for example, SQLShare), the creation of physical infrastructure for high-performance computing (Hyak) and scalable storage (lolo), and significant enhancements to campus and regional networks that facilitated access to cloud services.
 
-This year, the eScience Institute received an award from the Moore and Sloan foundations to create a Data Science Environment at the university. The physical space associated with this award will include classrooms and meeting areas for seminar series on data intensive research, and free cloud computing resources for data storage and analysis. The program itself will focus on career paths for researchers at the interface of science and data but will include the educational and career development of these researchers (though courses and curricula for data science). As part of our program we will utilize the eScience resources.
- Bootcamps and classes will provide students with introductory material for the computational components of our new courses. Seminar series will illustrate how the skills develop through statistics and machine learning might be applied to the broader science community (and the workforce in general). The cloud resources for analyzing data in the student projects will be made available to the ACMS students through the Data Science Environment.
+This year, the eScience Institute received an award from the Moore and Sloan foundations to create a Data Science Environment at the university. The physical space associated with this award will include classrooms and meeting areas for seminar series on data intensive research, and free cloud computing resources for data storage and analysis. The program itself will focus on career paths for researchers at the interface of science and data but will include the educational and career development of these researchers (though courses and curricula for data science). The current proposal will utilize these eScience resources.
+ Bootcamps and classes will provide students with introductory material for the computational components of our new courses. Seminar series will illustrate how the skills develop through statistics and machine learning might be applied to the broader research community. The cloud resources for analyzing data in the student projects will be made available to the ACMS students through the Data Science Environment.
 
 The Data Science Environment expects to hire promising undergraduate students from the mathematical and statistical field to work within the physical space on research software projects under the mentorship of the core staff and eScience leadership.  Research opportunities for undergraduates have a profound impact on their education and careers; the limiting factor is typically the management overhead.  By providing a physical location, a critical mass of mentors, a queue of shovel-ready projects, and a structured management environment, we will significantly increase the number of students we can mentor at one time.
 
 \subsection{Graduate Education: the ``Big-Data'' IGERT}
 
-Most disciplines, from physical to life sciences, have entered an era, where discovery is no longer limited by the collection and processing of data, but by the management, analysis, and visualization of this information. Novel developments in instrumentation have lead to a tremendous increase in the magnitude of this data, forcing scientists to perform analyses on data that is too big for standard desktop computing tools, i.e., leading to a focus on \emph{Big Data}.   While significant steps in the development of statistical methodologies for processing Big Data have been made, these ``hammers'' are rarely accessible to domain scientists, either because these scientists lack training in statistics or because the tools, designed for industry, fail to meet their needs.
+Most disciplines, from physical to life sciences, have entered an era where discovery is no longer limited by the collection and processing of data, but by the management, analysis, and visualization of this information. Novel developments in instrumentation have lead to a tremendous increase in the magnitude of this data, forcing scientists to perform analyses on data that is too big for standard desktop computing tools, i.e., leading to a focus on \emph{Big Data}.   While significant steps in the development of statistical methodologies for processing Big Data have been made, these ``hammers'' are rarely accessible to domain scientists, either because these scientists lack training in statistics or because the tools, designed for industry, fail to meet their needs.
 
 The recognition of this gap between the needs and capabilities of the current generation of graduate students has led to the development of an IGERT funded program in ``Big Data''.  The goal of the IGERT is to create a new breed of scientists: domain scientists proficient in and able to develop tools for Big Data Science, and statisticians and computer scientists versed in the needs and challenges of Big Data Science, and able to develop tools and models to tackle some of the biggest scientific questions of the coming decades.  Most importantly, this IGERT will have an immutable focus on multidisciplinary training, thus blurring the distinctions between domain scientists, computer scientists, and statisticians.
 
