--- a/organization.tex
+++ b/organization.tex
@@ -4,7 +4,7 @@
 \subsection{                      Key Project Aims                   }
 \label{sec:key-aims}
  
-This proposal aims to 
+%This proposal aims to 
 \bits
 \item Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
 by developing two new courses and a research seminar. 
@@ -16,12 +16,12 @@ continued involvement with \cdse~ research,
 declaration of newly developed computationally minded statistics major,
 intentions to pursue or progression along academic and/or career path within \cdse~ (e.g., graduate school application, internships, employment placement). 
 For UW curriculum: establishment of computationally minded statistics major,
-increased enrollment in newly developed major, inclusion of developed activities in other classes or curriculla.
+increased enrollment in newly developed major, inclusion of developed activities in other classes or curricula.
 
 
 \subsection{Responsibilities and Schedule}
 
-\vskip 0.1in Our main goals and deliverables are: 
+\noindent Our main goals and deliverables are: 
 \bits
 \item {\bf Education and Training} (Section \ref{sec:education}).
 
@@ -53,10 +53,8 @@ The PI, Meila, will be responsible for the overall success of the project. She w
 responsible for the course STAT 391, and for mentoring Statistics students. The Co-PIs 
 Connolly and Ivezi\'{c} will be responsible for the course ASTR 497, and for mentoring 
 Astronomy students. The Co-PI VanderPlas will be responsible for Python materials, 
-and for maintaining and developing tools available through the {\it astroML} package. 
-
-
-The work will adhere to this schedule: 
+and for maintaining and developing tools available through the {\it
+  astroML} package.  The work will adhere to the following schedule: 
 \bits
 \item {\bf  Year 1:} Design and introduce two new courses, \statcl, \astrocl, to
 the ACMS Program Statistics track. Start the Undergraduate \cdse\ Research Seminar. 
@@ -109,39 +107,33 @@ students in the conference.
 %2013, and improved their papers as a result of the Forum). 
 \meila~ is a recipient of the grant ``Statistical Modeling the
 Functional Activity in the Primary Motor Cortex'' from the {\em NSF
-  ERC for Sensorymotor and Neural Engineering}, is a two year ongoing
-project. It has involved so far 2 statistics graduate students and one
+  ERC for Sensorymotor and Neural Engineering}. It has involved so far 2 statistics graduate students and one
 undergraduate.
 
-The Co-PI Connolly is the Simulation Scientist for the LSST; responsible for the
-modeling and simulations of the scientific performance of the
+Co-PI Connolly is the Simulation Scientist for the LSST; responsible
+for the modeling and simulations of the scientific performance of the
 LSST. Connolly's most recent NSF award IIS-0844580 \$490,398 ``Putting
 Astronomy's Head in the Cloud'' (2009 -- 2012) led to the development
 of scalable image analysis tools that are built upon the Hadoop
 platform\citep{wiley2011}. His work focuses on statistical approaches
-to large astrophysical data sets including the development of n-tree
-searching algorithms that make the calculation of n-point correlation
-functions scale to size of current surveys \cite{Moore00}. This
-software was made publicly available and has been used to compute the
-2--point function on over 10$^6$ galaxies and the 3--point correlation
-function of 400,000 galaxies from the SDSS survey
-\cite{Scranton2002,Szapudi2002,Nichol2006,mcbride2011a,mcbride2011b}. 
+to large astrophysical data sets including the automated
+classification of spectra \cite{vdp2009,daniel2011} and active
+learning methods to accelerate the exploration of complex parameter
+spaces \cite{daniel2012}.
 
-The Co-PI Ivezi\'{c} is the Project Scientist for the LSST. He was
+Co-PI Ivezi\'{c} is the Project Scientist for the LSST. He was
 recently PI on two projects supported by NSF that are indirectly
 related to the work proposed here (mostly through data mining aspects,
 public release practice for all data products, and through engaging
-large numbers of students in research and publication process).
-The projects ``Towards a Panoramic 7-D Map of the Milky Way''
-(AST-070790) and ``Mapping the Milky Way: Data-miners, Modelers,
-Observers, Unite!'' (AST-1008784) quantified statistical behavior of a
-few tens of millions of Milky Way stars observed by the Sloan Digital
-Sky Survey in multi-dimensional position--velocity--chemical
-composition space. The results were published in over a dozen refereed
-papers, and the work engaged four graduate students (including two
-Ph.D. theses) and 11 undergraduate students.  A team of three
-undergraduate students has developed an education and public outreach
-site.
+large numbers of students in research and publication process).  The
+project ``Mapping the Milky Way: Data-miners, Modelers, Observers,
+Unite!'' (AST-1008784) quantified statistical behavior of a few tens
+of millions of Milky Way stars observed by the Sloan Digital Sky
+Survey in multi-dimensional position--velocity--chemical composition
+space. The results were published in over a dozen refereed papers, and
+the work engaged four graduate students (including two Ph.D. theses)
+and 11 undergraduate students.  A team of three undergraduate students
+has developed an education and public outreach site.
 %The key project aims for the NSF award AST-0507529 ``Interpretation of
 %Modern Radio Surveys: Test of the Unification Paradigm'' were
 %unification of several modern radio catalogs into a single public
@@ -160,9 +152,10 @@ Co-PI Vanderplas is currently an NSF post-doctoral fellow, through the NSF
 Transformative Computational Science using Cyberinfrastructure (CI TRaCS)
 program (``Weak Gravitational Lensing in the Petabyte Era'', award
 CI-TraCS-1226371).
-Though Vanderplas' PhD is in Astronomy, the fellowship is in the Computer
-Science and Engineering department's Database Research Group, and is focused
-on pushing the boundaries of data-intensive cosmological science through
+Vanderplas
+%' PhD is in Astronomy, the fellowship is in the Computer
+%Science and Engineering department's Database Research Group, and 
+is focused on pushing the boundaries of data-intensive cosmological science through
 fundamental work on new database technologies. The cross-disciplinary nature
 of this work extends that of Vanderplas' past research, which includes several
 projects with collaborators from computer science and related fields
@@ -177,25 +170,24 @@ popular machine learning toolkit
 and the primary author of several specialized Python packages,
 including the {\it AstroML} package which is an integral piece of the
 curriculum for the current proposal.
-As a result of his role in the scientific Python community, Vanderplas
-has presented dozens of talks, tutorials, and seminars related to scientific
-computing in Python, primarily at the
-PyCon\footnote{\url{https://us.pycon.org/}},
-SciPy\footnote{\url{http://conference.scipy.org/}},
-and PyData\footnote{\url{http://pydata.org/}} conference series.
+%As a result of his role in the scientific Python community, Vanderplas
+%has presented dozens of talks, tutorials, and seminars related to scientific
+%computing in Python, primarily at the
+%PyCon\footnote{\url{https://us.pycon.org/}},
+%SciPy\footnote{\url{http://conference.scipy.org/}},
+%and PyData\footnote{\url{http://pydata.org/}} conference series.
 This expertise contributes to the practical side of the above-mentioned
 Astronomy textbook Vanderplas authored with Co-PIs Ivezic and Connolly.
 
-Beyond the statistical and astrophysical aspects of the research
-described above the PIs have demonstrated a commitment for integrating
-research and education (see, for example, the extensive machine
-learning tools available at \url{http://astroml.org} and the XXX). In
-the field of informal education, Connolly was the technical lead for
-the development of Sky in Google Earth (Google Sky;
-http://earth.google.com) which enabled the seamless exploration of
-astronomical images of the sky, and recently with Vanderplas worked to
-develop and deploy an affordable digital planetarium system using Microsoft's
-World Wide Telescope software \cite{rosenfield2011}.
+The PIs have demonstrated a commitment for integrating research and
+education (see, for example, the extensive machine learning tools
+available at \url{http://astroml.org}). In the field of informal
+education, Connolly was the technical lead for the development of Sky
+in Google Earth (Google Sky; http://earth.google.com) which enabled
+the seamless exploration of astronomical images of the sky, and
+recently with Vanderplas worked to develop and deploy an affordable
+digital planetarium system using Microsoft's World Wide Telescope
+software \cite{rosenfield2011}.
 
 \comment{
 \section{Cemetery}
