--- a/uw.tex
+++ b/uw.tex
@@ -12,9 +12,9 @@ The Data Science Environment expects to hire promising undergraduate students fr
 
 \subsection{Graduate Education: the ``Big-Data'' IGERT}
 
-Most disciplines, from physical to life sciences, have entered an era where discovery is no longer limited by the collection and processing of data, but by the management, analysis, and visualization of this information. Novel developments in instrumentation have lead to a tremendous increase in the magnitude of this data, forcing scientists to perform analyses on data that is too big for standard desktop computing tools, i.e., leading to a focus on \emph{Big Data}.   While significant steps in the development of statistical methodologies for processing Big Data have been made, these ``hammers'' are rarely accessible to domain scientists, either because these scientists lack training in statistics or because the tools, designed for industry, fail to meet their needs.
+%Most disciplines, from physical to life sciences, have entered an era where discovery is no %longer limited by the collection and processing of data, but by the management, analysis, %and visualization of this information. Novel developments in instrumentation have lead to a %tremendous increase in the magnitude of this data, forcing scientists to perform analyses %on data that is too big for standard desktop computing tools, i.e., leading to a focus on %\emph{Big Data}.   While significant steps in the development of statistical methodologies %for processing Big Data have been made, these ``hammers'' are rarely accessible to domain %scientists, either because these scientists lack training in statistics or because the tools, %designed for industry, fail to meet their needs.
 
-The recognition of this gap between the needs and capabilities of the current generation of graduate students has led to the development of an IGERT funded program in ``Big Data''.  The goal of the IGERT is to create a new breed of scientists: domain scientists proficient in and able to develop tools for Big Data Science, and statisticians and computer scientists versed in the needs and challenges of Big Data Science, and able to develop tools and models to tackle some of the biggest scientific questions of the coming decades.  Most importantly, this IGERT will have an immutable focus on multidisciplinary training, thus blurring the distinctions between domain scientists, computer scientists, and statisticians.
+The recognition of the gap between the needs and education of the current generation of graduate students has led to the development of an IGERT funded program in ``Big Data''.  The goal of the IGERT is to create a new breed of scientists: domain scientists proficient in and able to develop tools for Big Data Science, and statisticians and computer scientists versed in the needs and challenges of Big Data Science, and able to develop tools and models to tackle some of the biggest scientific questions of the coming decades.  Most importantly, this IGERT will have an immutable focus on multidisciplinary training, thus blurring the distinctions between domain scientists, computer scientists, and statisticians.
 
 The IGERT program naturally maps to our proposed ACMS Statistics tract. IGERT graduate students will undertake some of the supervision of the projects described in Section~\ref{sec:research}, and the mentoring of the mathematical and statistical students. Each of these elements will be integrated in our proposed curricula. 
 %One of the key goals is developing a diverse STEM workforce, including strategies for %recruiting and retaining traditionally under-represented groups, women and students with% %disabilities.
