--- a/education.tex
+++ b/education.tex
@@ -223,9 +223,8 @@ How does UW support this plan:
 \label{sec:course-descr}
 
 \bits
-\item \statcl 
-``Computational Statistical Modeling and Machine Learning'' (4 credits)
-\item \astrocl ``Data Intensive Astronomy'' (3 credits)
+\item \statcl~``Computational Statistical Modeling and Machine Learning'' (4 credits)
+\item \astrocl~``Statistics, Data Mining, and Machine Learning in Astronomy'' (3 credits)
 \eits
 
 The aims of these sources are to (1) provide a strong statistical
@@ -279,7 +278,7 @@ Python, while \astrocl~ will cover Python libraries for working with big data.
 
 \vskip 0.2in
 \bit
-\item  \underline{\statcl~ {\bf Draft Syllabus}}  XXX NEEDS TITLE \\
+\item  \underline{\statcl~``Computational Statistical Modeling and Machine Learning'' {\bf Draft Syllabus}} \\
 \bit
 \item a review of the concept of likelihood and Max Likelihood estimation (cases in which MLE has no closed form, gradient ascent/Newton estimation of MLE)
 \item a review of basic probability models with focus on ML estimation of these models, supported heavily by simulation (e.g demonstrating gaussianity of MLE for certain models, and non-gaussianity for other models, including Zipf's law type distributions)
@@ -344,7 +343,7 @@ extensive prior knowledge in statistics will be required.
 
 
 \vskip 0.2in
-\item \underline{\astrocl~ {\bf Draft Syllabus}} XXX NEEDS TITLE \\
+\item \underline{\astrocl~``Statistics, Data Mining, and Machine Learning in Astronomy'' {\bf Draft Syllabus}} \\
 \bit
 \item computational challenges in data-intensive astronomy and astrophysics 
 (data types and data management systems, types of computational problems and 
