add listfiles to main document

--- a/proposal.tex
+++ b/proposal.tex
@@ -1,3 +1,4 @@
+\listfiles  % list version of package files in proposal.log
 \documentclass[nofootbib,floatfix,11pt]{article}
 \usepackage[square]{natbib}
 \usepackage[paperwidth=8.5in,paperheight=11in,centering,margin=1in]{geometry}
